--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,31 @@
 /* CSS Style Sheet */
 
- /*p {
+@import url('https://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900');
+@import url('https://fonts.googleapis.com/css?family=Clicker+Script');
+
+/*font-family: 'Clicker Script', cursive;
+font-family: 'Elsie Swash Caps', cursive;
+*/
+
+ p {
   font-size: 1em;
   line-height: 1.5em;
-}*/
+  }
+
+figcaption {
+  /*font-weight: normal;
+  font-size: 0.75em;
+  line-height: 1.5em;
+  font-family: Georgia, "New Times Roman", serif;
+
+  Can specify all the above in font*/
+  font: normal 0.75em/1.5em  'Elsie Swash Caps', cursive;
+  color: #777;
+  text-align: right;
+}
+
+.milk-text {/*select elements with class = milk-text */
+  font: bold 2.6em 'Elsie Swash Caps', cursive;
+  color: white;
+  text-shadow: 0 2px 3px #000;
+}
