--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,33 @@ figcaption {
   color: white;
   text-shadow: 0 2px 3px #000;
 }
+
+/*ID selector - apply to one unique element per page (provided ID is actually unique)*/
+#logo {/*selects elements with id of logo*/
+  background: aqua;
+}
+
+/*Descendent Selector*/
+#logo h1{/*selects <h1> if inside the id=logo*/
+  font-family: 'Clicker Script', cursive;
+}
+
+#logo h2{/*selects <h1> if inside the id=logo*/
+  font-family: 'Elsie Swash Caps', cursive;
+}
+
+/*Psuedo Selector*/
+
+#details a:link, #details a:visited{/*this is a descent and a psuedo...descent defined by space, psuedo defined by colon, comma allows us to define more than one group*/
+  color:black;
+  text-decoration: none;
+}
+
+#details a:hover{
+  color: black;
+  text-decoration: underline;
+}
+
+#details a:active{
+  color: red;
+}
