--- a/css/style.css
+++ b/css/style.css
@@ -1,74 +1,81 @@
-/* CSS Style Sheet */
+@import url(http://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
+@import url(http://fonts.googleapis.com/css?family=Clicker+Script);
 
-@import url('https://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900');
-@import url('https://fonts.googleapis.com/css?family=Clicker+Script');
+/*////////// GLOBAL //////////*/
 
-/*font-family: 'Clicker Script', cursive;
-font-family: 'Elsie Swash Caps', cursive;
-*/
+h3 {
+  margin: 0 0 10px;
+}
 
- p {
-  font-size: 1em;
+p {
+  font-size: 1em; /* 16px, ?pt, 100%, 1em */
   line-height: 1.5em;
-  }
+}
+
+figure {
+  margin: 0 0 10px;
+}
 
 figcaption {
-  /*font-weight: normal;
-  font-size: 0.75em;
-  line-height: 1.5em;
-  font-family: Georgia, "New Times Roman", serif;
-
-  Can specify all the above in font*/
-  font: normal 0.75em/1.5em  'Elsie Swash Caps', cursive;
+  font: normal 0.75em/1.5em 'Elsie Swash Caps', cursive;
   color: #777;
   text-align: right;
 }
 
-.milk-text {/*select elements with class = milk-text */
+.milk-text {
   font: bold 2.6em 'Elsie Swash Caps', cursive;
   color: white;
   text-shadow: 0 2px 3px #000;
 }
 
-/*ID selector - apply to one unique element per page (provided ID is actually unique)*/
-#logo {/*selects elements with id of logo*/
+.shadow {
+  box-shadow: 0 3px 10px #333;
 }
 
-/*Descendent Selector*/
-#logo h1{/*selects <h1> if inside the id=logo*/
-  font-family: 'Clicker Script', cursive;
+.border-right {
+  border-right: 1px dotted #ccc;
+  padding-right: 30px;
 }
 
-#logo h2{/*selects <h1> if inside the id=logo*/
-  font-family: 'Elsie Swash Caps', cursive;
+/*////////// BACKGROUNDS //////////*/
+
+.white-wood {
+  background: #ccc;
+  /*url(../images/white-wood.jpg) no-repeat center top;*/
+  background-size: cover;
 }
 
-/*Psuedo Selector*/
 
-#details a:link, #details a:visited{/*this is a descent and a psuedo...descent defined by space, psuedo defined by colon, comma allows us to define more than one group*/
-  color:black;
-  text-decoration: none;
+/*/////// MEDIA ////////*/
+
+img, video, audio, iframe, table, form {
+  width: 100%; /* IE */
+  max-width: 100%; /* FF, Safari, Chrome */
 }
 
-#details a:hover{
-  color: black;
-  text-decoration: underline;
-}
+/*////////// FIXES //////////*/
 
-#details a:active{
-  color: red;
-}
-/* ///////////////MEDIA///////////// */
- img, video, audio {
-   max-width: 100%;
- }
-
-/* ///////////////Layout///////////// */
-*{
-  box-sizing: border-box;
+* {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
+
+.clearfix:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  height: 0;
+  line-height: 0;
+}
+
+.clear {
+  clear:both;
+}
+
+/*/////// LAYOUT ////////*/
+
 .wrapper {
   width: 960px;
   margin: 0 auto;
@@ -77,17 +84,15 @@ figcaption {
 .col-1 {
   float: left;
   width: 32%;
-  background: #ccc
 }
 
 .col-2 {
   float: left;
   width: 66%;
-  background: #ccc
 }
 
 .col-3 {
-  background: #ccc
+
 }
 
 [class*="col-"] {
@@ -98,36 +103,12 @@ figcaption {
   margin-left: 0%;
 }
 
-.clearfix:after{
-  content: ".";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  height: 0;
-  line-height: 0;
-}
-
-/* ///////////////SECTIONS///////////// */
-
-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background: #fff;
-  z-index: 1;
-}
-section {
-  padding: 20px;
-  margin-bottom: 20px;
-}
-
-/* ///////////////SOCIAL///////////// */
+/*/////// SOCIAL ////////*/
 
 #social {
   position: fixed;
-  top: 200px;
-  right:20px;
+  top: 185px;
+  right: 20px;
   width: 40px;
   z-index: 1;
 }
@@ -137,5 +118,56 @@ section {
   width: 40px;
   height: 40px;
   background: yellow;
+}
+
+/*////////// HEADER //////////*/
+
+
+
+/*////////// NAVBAR //////////*/
+
+
+
+/*////////// LOGO //////////*/
+
+
+
+#logo h1 {
+  font-family: 'Clicker Script', cursive;
+}
+
+#logo h2 {
+  font-family: 'Elsie Swash Caps', cursive;
+}
+
+/*////////// MAIN SECTIONS //////////*/
+
+section {
+  padding: 30px;
+  margin-bottom: 20px;
 
 }
+
+/*////////// DETAILS //////////*/
+
+
+
+#details div {
+  height: 221px;
+}
+
+#details a:link, #details a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+#details a:active {
+  color: red;
+}
+
+/*////////// FOOTER //////////*/
